--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^18.0.1",
     "@angular/forms": "^18.0.1",
     "@angular/material": "^18.0.1",
+    "@angular/material-date-fns-adapter": "^18.0.1",
     "@angular/platform-browser": "^18.0.1",
     "@angular/platform-browser-dynamic": "^18.0.1",
     "@angular/router": "^18.0.1",
